force-app/main/default/objects/Study_status_desc_and_motivational_msg__mdt/Study_status_desc_and_motivational_msg__mdt.object-meta.xml
<CustomObject>
    <label>Study status desc and motivational msg</label>
    <pluralLabel>Study status descs and motivational msgs</pluralLabel>
</CustomObject>