force-app/main/default/objects/Study_status_desc_and_motivational_msg__mdt/fields/Master_Custom__c.field-meta.xml
<CustomField>
    <fullName>Master_Custom__c</fullName>
    <label>Master_Custom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>