force-app/main/default/objects/Study_status_desc_and_motivational_msg__mdt/fields/Motivational_message__c.field-meta.xml
<CustomField>
    <fullName>Motivational_message__c</fullName>
    <label>Motivational message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>