force-app/main/default/objects/Study_status_desc_and_motivational_msg__mdt/fields/PER_Participant_Label__c.field-meta.xml
<CustomField>
    <fullName>PER_Participant_Label__c</fullName>
    <label>PER_Participant_Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>