force-app/main/default/objects/Study_status_desc_and_motivational_msg__mdt/fields/Status_description__c.field-meta.xml
<CustomField>
    <fullName>Status_description__c</fullName>
    <label>Status description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>