force-app/main/default/objects/Study_status_desc_and_motivational_msg__mdt/fields/Status_order__c.field-meta.xml
<CustomField>
    <fullName>Status_order__c</fullName>
    <label>Status order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>